--- a/configserver/src/main/resources/config/licensing-service.properties
+++ b/configserver/src/main/resources/config/licensing-service.properties
@@ -10,3 +10,7 @@ spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 management.endpoints.web.exposure.include=*
 management.endpoints.enabled-by-default=true
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://eurekaserver:8070/eureka/
