--- a/configserver/src/main/resources/config/organization-service.properties
+++ b/configserver/src/main/resources/config/organization-service.properties
@@ -7,8 +7,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validation-query=select 1
-
 server.port=8081
-
 management.endpoints.web.exposure.include=*
 management.endpoints.enabled-by-default=true
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://eurekaserver:8070/eureka/
