--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -26,14 +26,19 @@ services:
       ENCRYPT_KEY: "fje83Ki8403Iod87dne7Yjsl3THueh48jfuO9j4U2hf64Lo"
     networks:
       - backend
-#  eurekaserver:
-#    image: ostock/eurekaserver:0.0.1-SNAPSHOT
-#    ports:
-#      - "8070:8070"
-#    environment:
-#      SPRING_CLOUD_CONFIG_URI: http://configserver:8071
-#    depends_on:
-#      - configserver
+  eurekaserver:
+    image: ostock/eurekaserver:0.0.1-SNAPSHOT
+    ports:
+      - "8070:8070"
+    environment:
+      SPRING_CLOUD_CONFIG_URI: http://configserver:8071
+#      EUREKA_INSTANCE_HOSTNAME: eurekaserver
+#      EUREKA_CLIENT_REGISTER_WITH_EUREKA: "false"
+#      EUREKA_CLIENT_FETCH_REGISTRY: "false"
+    networks:
+      - backend
+    depends_on:
+      - configserver
   licensing-service:
     image: ostock/licensing-service:0.0.1-SNAPSHOT
     ports:
