--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -39,6 +39,22 @@ services:
       - backend
     depends_on:
       - configserver
+  gatewayserver:
+    image: ostock/gatewayserver:0.0.1-SNAPSHOT
+    ports:
+      - "8072:8072"
+    environment:
+      SPRING_CLOUD_CONFIG_URI: http://configserver:8071
+#      PROFILE: "default"
+#      SERVER_PORT: "8072"
+#      CONFIGSERVER_PORT: "8071"
+#      CONFIGSERVER_URI: "http://configserver:8071"
+#      EUREKASERVER_URI: "http://eurekaserver:8070/eureka"
+#      EUREKASERVER_PORT: "8070"
+    networks:
+      backend:
+        aliases:
+          - "gateway"
   licensing-service:
     image: ostock/licensing-service:0.0.1-SNAPSHOT
     ports:
