--- a/licensing-service/src/test/resources/application.properties
+++ b/licensing-service/src/test/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:h2:mem:ostock_dev
 spring.datasource.username=sa
 spring.datasource.password=
+redis.server=localhost
+redis.port=6379
