--- a/configserver/src/main/resources/bootstrap.yml
+++ b/configserver/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: config-server
   profiles:
-    active: native,git
+    active: native
   cloud:
     config:
       server:
