--- a/configserver/src/main/resources/config/organization-service.properties
+++ b/configserver/src/main/resources/config/organization-service.properties
@@ -14,3 +14,14 @@ eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://eurekaserver:8070/eureka/
+keycloak.realm=spmia-realm
+keycloak.auth-server-url=http://keycloak:8080/auth
+keycloak.ssl-required=external
+keycloak.resource=ostock
+keycloak.credentials.secret=LuNheJd20RAxJtlHLt6OCTdTFc0COY52
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+spring.cloud.stream.bindings.output.destination=orgChangeTopic
+spring.cloud.stream.bindings.output.content-type=application/json
+spring.cloud.stream.kafka.binder.zkNodes=kafka
+spring.cloud.stream.kafka.binder.brokers=kafka
