--- a/configserver/src/main/resources/config/gateway-server.yml
+++ b/configserver/src/main/resources/config/gateway-server.yml
@@ -22,6 +22,8 @@ spring:
           filters:
             - RewritePath=/organization/(?<path>.*), /$\{path}
             - RemoveRequestHeader=Cookie,Set-Cookie
+  zipkin:
+    baseUrl: http://zipkin:9411
 management:
   endpoints:
     web:
