--- a/configserver/src/main/resources/config/licensing-service.properties
+++ b/configserver/src/main/resources/config/licensing-service.properties
@@ -28,5 +28,6 @@ spring.cloud.stream.kafka.binder.zkNodes=kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
 redis.server=redis
 redis.port=6379
+spring.zipkin.baseUrl=http://zipkin:9411
 
 
