--- a/configserver/src/main/resources/config/organization-service.properties
+++ b/configserver/src/main/resources/config/organization-service.properties
@@ -25,3 +25,4 @@ spring.cloud.stream.bindings.output.destination=orgChangeTopic
 spring.cloud.stream.bindings.output.content-type=application/json
 spring.cloud.stream.kafka.binder.zkNodes=kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
+spring.zipkin.baseUrl=http://zipkin:9411
