--- a/configserver/src/main/resources/config/licensing-service.properties
+++ b/configserver/src/main/resources/config/licensing-service.properties
@@ -18,7 +18,7 @@ keycloak.realm=spmia-realm
 keycloak.auth-server-url=http://keycloak:8080/auth
 keycloak.ssl-required=external
 keycloak.resource=ostock
-keycloak.credentials.secret=LuNheJd20RAxJtlHLt6OCTdTFc0COY52
+keycloak.credentials.secret=8pVmI7vnxs7QkeyXNPkzPkUDvKItjlcb
 keycloak.use-resource-role-mappings=true
 keycloak.bearer-only=true
 spring.cloud.stream.bindings.inboundOrgChanges.destination=orgChangeTopic
@@ -29,5 +29,6 @@ spring.cloud.stream.kafka.binder.brokers=kafka
 redis.server=redis
 redis.port=6379
 spring.zipkin.baseUrl=http://zipkin:9411
+spring.sleuth.sampler.percentage=1
 
 
