--- a/configserver/src/main/resources/config/organization-service.properties
+++ b/configserver/src/main/resources/config/organization-service.properties
@@ -18,7 +18,7 @@ keycloak.realm=spmia-realm
 keycloak.auth-server-url=http://keycloak:8080/auth
 keycloak.ssl-required=external
 keycloak.resource=ostock
-keycloak.credentials.secret=LuNheJd20RAxJtlHLt6OCTdTFc0COY52
+keycloak.credentials.secret=8pVmI7vnxs7QkeyXNPkzPkUDvKItjlcb
 keycloak.use-resource-role-mappings=true
 keycloak.bearer-only=true
 spring.cloud.stream.bindings.output.destination=orgChangeTopic
@@ -26,3 +26,4 @@ spring.cloud.stream.bindings.output.content-type=application/json
 spring.cloud.stream.kafka.binder.zkNodes=kafka
 spring.cloud.stream.kafka.binder.brokers=kafka
 spring.zipkin.baseUrl=http://zipkin:9411
+spring.sleuth.sampler.percentage=1
